--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   bids:
     image: fsalehpour/bids:latest
+    restart: on-failure
     networks:
       - smartnet
     environment:
@@ -23,6 +24,7 @@ services:
       - rabbitmq
 
   smart:
+    restart: on-failure
     build: .
     networks:
       - smartnet
