--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,36 @@
+asn1crypto==0.24.0
+attrs==19.1.0
+autobahn==19.3.3
+Automat==0.7.0
+certifi==2019.3.9
+cffi==1.12.2
+chardet==3.0.4
+constantly==15.1.0
+cryptography==2.6.1
+dateparser==0.7.1
+hyperlink==19.0.0
+idna==2.8
+incremental==17.5.0
 mock==2.0.0
 pbr==5.1.3
 pika==0.13.1
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
+pycparser==2.19
+PyHamcrest==1.9.0
 pymongo==3.7.2
+pyOpenSSL==19.0.0
+python-binance==0.7.1
+python-dateutil==2.8.0
 python-dotenv==0.10.1
+pytz==2018.9
+regex==2019.3.12
+requests==2.21.0
+service-identity==18.1.0
 six==1.12.0
+Twisted==18.9.0
+txaio==18.8.1
+tzlocal==1.5.1
 unittest-data-provider==1.0.1
+urllib3==1.24.1
+zope.interface==4.6.0
