update modify mongo func

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,12 @@ services:
 
   rabbitmq:
     image: rabbitmq:management-alpine
+    ports:
+      - "15672:15672"
+      - "5672:5672"
     networks:
       - smartnet
+
     hostname: "smartmq"
 
   bids:
@@ -29,6 +33,8 @@ services:
     depends_on:
       - rabbitmq
       - mongo
+    volumes:
+      - ../reports:/reports
 
 networks:
   smartnet:
